# ai-dev-agent

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  pypi-release.md  runbook.md
scripts/: local_test.sh
src/ai_dev_agent/: __init__.py  cli.py  config.py  runner.py
src/ai_dev_agent/models/: types.py
src/ai_dev_agent/services/: context_builder.py  diff_applier.py  framework_detector.py  generator.py  git_manager.py  github_client.py  jira_client.py  openai_client.py  planner.py  repo_indexer.py  requirement_reader.py  validator.py
tests/: test_cli.py
tests/fixtures/mock_repo/app/: main.py
tests/fixtures/requirements/: health.md
tests/integration/: test_runner_apply.py  test_runner_dry_run.py
tests/unit/: test_context_builder.py  test_framework_detector.py  test_generator_mock.py  test_planner_mock.py  test_repo_indexer.py  test_requirement_reader.py
